Avalara Fullqa/src/B2B Commerce/objects/E_ProductSpec__c.object
<CustomObject>
    <description>Object used to map products to specifications.  These allows you to associated any number of additional attributes to the product using the common specifications referenced in the Spec table above.</description>
    <fields>
        <fullName>ProductID__c</fullName>
        <description>Reference to the product object</description>
        <formula>Product__c + &apos;-&apos; +  Spec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product Item</label>
        <referenceTo>E_Product__c</referenceTo>
        <relationshipLabel>Product Specs</relationshipLabel>
        <relationshipName>Product_Specs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SpecValue__c</fullName>
        <description>The value that we are associating to this pairing. For example, if the specification is Processor Speed, the value might be 2.4GHz</description>
        <label>SpecValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spec__c</fullName>
        <description>Reference to the specification object</description>
        <label>Spec</label>
        <referenceTo>E_Spec__c</referenceTo>
        <relationshipLabel>Product Specs</relationshipLabel>
        <relationshipName>Product_Specs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CC Product Spec</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ProductID__c</columns>
        <columns>Product__c</columns>
        <columns>Spec__c</columns>
        <columns>SpecValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000000}</displayFormat>
        <label>Product Spec Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>